--- a/css/logo-anim.css
+++ b/css/logo-anim.css
@@ -4,7 +4,6 @@
     align-items: center;
     justify-content: center;
     margin: 48px auto 0 auto;
-    /* Размер контейнера равен квадрату на старте */
     width: 140px;
     height: 140px;
     transition: width 0.6s, height 0.6s;
@@ -12,7 +11,6 @@
     position: relative;
   }
   
-  /* Квадрат с J виден по умолчанию */
   .logo-single {
     display: block;
     position: absolute;
@@ -49,10 +47,9 @@
   /* --- Hover-анимация --- */
   .logo-animated-wrap:hover {
     width: 540px;
-    height: 100px;
+    height: 140px;
     transition: width 0.6s, height 0.6s;
   }
-  /* Скрываем J, показываем JEFF-SET */
   .logo-animated-wrap:hover .logo-single {
     opacity: 0;
     transition: opacity 0.2s;
@@ -76,7 +73,7 @@
     }
     .logo-full svg, .logo-single svg {
       width: 98vw !important;
-      height: auto !important;
+      height: 98vw !important;
       max-width: 100vw;
       max-height: 100vw;
     }
