--- a/css/jeff-set.css
+++ b/css/jeff-set.css
@@ -10,14 +10,18 @@
   font-family: 'Rubik';
   src: url('../font/Rubik-Bold.woff2') format('woff2'),
     url('../font/Rubik-Bold.woff') format('woff');
-  font-weight: 700;
+  font-weight: 500;
   font-style: normal;
 }
 
 :root {
   --dark: #080808;
   --light: #fcf9f6;
-  --accent: #ff5e3a;
+  --accent: #663399;
+  --accentw: #21759b;
+  --accents: #96bf48;
+  --accentc: #F48120;
+  --accentd: #0080FF;
   --header-font: 'Rubik Doodle Shadow', 'Roboto', Arial, sans-serif;
   --main-font: 'Rubik', Arial, sans-serif;
   --body-font: 'Roboto', Arial, sans-serif;
