--- a/css/jeff-set.css
+++ b/css/jeff-set.css
@@ -14,6 +14,13 @@
   font-style: normal;
 }
 
+@font-face {
+	font-family: 'Comfortaa';
+	src: url('Comfortaa-Bold.woff2') format('woff2'), url('Comfortaa-Bold.woff') format('woff');
+	font-weight: 700;
+	font-style: normal;
+}
+
 :root {
   --dark: #080808;
   --light: #fcf9f6;
@@ -22,9 +29,9 @@
   --accents: #96bf48;
   --accentc: #F48120;
   --accentd: #0080FF;
-  --header-font: 'Rubik Doodle Shadow', sans-serif;
-  --main-font: 'Rubik', sans-serif;
-  --body-font: 'IBM Plex Sans', sans-serif;
+  --header-font: 'Rubik Doodle Shadow';
+  --main-font: 'Rubik';
+  --body-font: 'Comfortaa';
   --background: var(--light);
   --text: var(--dark);
   --btn-bg: var(--dark);
