--- a/css/jeff-set.css
+++ b/css/jeff-set.css
@@ -16,7 +16,7 @@
 
 @font-face {
 	font-family: 'Comfortaa';
-	src: url('Comfortaa-Bold.woff2') format('woff2'), url('Comfortaa-Bold.woff') format('woff');
+	src: url('../font/Comfortaa-Bold.woff2') format('woff2'), url('../font/Comfortaa-Bold.woff') format('woff');
 	font-weight: 700;
 	font-style: normal;
 }
@@ -152,8 +152,8 @@ h6 {
 }
 
 h2 { font-size: 2.5rem; }
-h3 { font-size: 1.5rem; }
-h4 { font-size: 1.2rem; }
+h3 { font-size: 2rem; }
+h4 { font-size: 1.4rem; }
 h5, h6 { font-size: 1rem; }
 
 main {
